SW-2666 - Swagger docs and make commands updated
