# main.go
@@ -1,21 +1,22 @@
-// @todo.. I have attempted to generate docs using go swagger but for some reason it is super flaky!
-// I tried it using GoLand IDE which I suspect may have been the issue with indentation etc.
-// Wasted enough time faffing so decided to write swagger docs manually
-
 // File service API
 //
-// Documentation for Zip API
+// Documentation for creating a file request and downloading files using the API
 //
-//  swagger: "2.0"
-//	Schemes: http
-// 	BasePath: /
-// 	Version: 1.0.0
+//   Schemes: http, https
+//   BasePath: /
+//   Version: 1.0.0
+//   securityDefinitions:
+//     Bearer:
+//       type: apiKey
+//       name: Authorization
+//       in: header
 //
-// 	Consumes:
-// 	- application/json
+//   Consumes:
+// 	  - application/json
 //
-//	Produces:
-//	- application/json
+//   Produces:
+//    - application/json
+//
 // swagger:meta
 package main
 
@@ -66,29 +67,39 @@ func main() {
     // swagger:operation GET /zip/{reference} zip download
     // Download Zip file from zip request reference
     // ---
+    // produces:
+	//   - application/zip
+	//   - application/json
+	// security:
+	//  - Bearer: []
     // parameters:
     // - name: reference
     //   in: path
     //   description: reference of the zip file request
     //   required: true
+    //
     // responses:
     //   '200':
     //     description: Zip file download
     //   '404':
-    //     description: Zip file download
+    //     description: File download request for ref not found
+	//   '403':
+	//     description: Access denied
+	//   '401':
+	//     description: Missing JWT token
+	//   '500':
+	//     description: Unexpected error occurred
 	getRouter.Handle("/zip/{reference}", zh)
 
 	// swagger:operation POST /zip/request zip request
 	// Makes a request for a set of files to be downloaded from S3
 	// ---
+	// security:
+	//  - Bearer: []
 	// parameters:
-	// - name: ref
-	//   in: body
-	//   description: Unique reference for the zip file download request
-	//   required: true
 	// - name: files
 	//   in: body
-	//   description: reference of the zip file request
+	//   description: s3 file paths alongside the human readable filenames as each file will be displayed in the zip file
 	//   required: true
 	//   schema:
 	//       type: array
@@ -99,17 +110,23 @@ func main() {
 	//                  type: string
 	//              filename:
 	//                  type: string
-	// - name: hash
-	//   in: body
-	//   description: JWT token
-	//   required: true
-	// - name: ttl
-	//   in: body
-	//   description: Time before the request expires
-	//   required: true
+	//              folder:
+	//                  type: string
 	// responses:
 	//   '200':
 	//     description: Zip file download
+	//     schema:
+	//       type: object
+	//       properties:
+	//         link:
+	//           type: string
+	//           description: Link to download the zip file
+	//   '403':
+	//     description: Access denied
+	//   '401':
+	//     description: Missing JWT token
+	//   '500':
+	//     description: Unexpected error occurred
 
 	// @todo write code for this endpoint (or generate?)
 
